[package]
name = "aud2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"

# Logger abstraction
log = "0.4.14"

# Logger implementation.
# Disable timestamps via disable-features=false.
# Print to stderr and use colors.
simple_logger = { version = "2.1.0", default-features=false, features=["stderr", "colors"] }
