[package]
name = "aud2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Parsing command line arguments
argh = "0.1.7"

# Reading and parsing csv files
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }

# Arithemtic on fraction
fraction = "0.9.0"

# Logger abstraction
log = "0.4.14"

# Logger implementation
env_logger = "0.9.0"


# Support for error contexts
anyhow = "1.0.53"

# Advanced iterator functions
itertools = "0.10.3"
